# TempFlex

./: README.md  pyproject.toml
llava/: conversation.py  mm_utils.py  utils.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_gemma.py  llava_gemma2.py  llava_gemma3.py  llava_phi3.py  llava_qwen3.py  modeling_thoth.py
llava/model/multimodal_encoder/: builder.py  navit_encoder.py  siglip2_anyres_encoder.py  temporal_encoder.py  tff.py
llava/model/multimodal_encoder/siglip2/: configuration_siglip2.py  image_processing_siglip2.py  modeling_siglip2.py
llava/model/multimodal_encoder/swin/: __init__.py  configuration_swin.py  modeling_swin.py  test.py
llava/model/multimodal_projector/: builder.py  patch_merger.py  pooler_projector.py
llava/model/multimodal_resampler/: frame_selector.py
llava/model/qwen2_5_vl/: configuration_qwen2_5_vl.py  image_processing_qwen2_5_vl.py  image_utils.py  import_utils.py  modeling_qwen2_5_vl.py  modeling_rope_utils.py
llava/train/: llava_trainer.py  train.py  train_dpo.py
scripts/: zero2.json  zero2_v2.json
scripts/train_tempflex_qwen3/: stage_1.sh  stage_2.sh  stage_3.sh  stage_4.sh
