[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tempflex"
version = "1.0.0"
description = "TempFlex: Advancing MLLMs with Temporal Perception and Natively Scalable Resolution Encoding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
standalone = [
    "shortuuid",
    "httpx==0.24.0",
    "einops",
    "ftfy",
]


train = [
    "llava[standalone]",
    "numpy==1.26.1",
    "open_clip_torch==2.29.0",
    "fastapi==0.115.6",
    "markdown2[all]",
    "requests",
    "sentencepiece==0.1.99",
    "uvicorn==0.34.0",
    "wandb==0.18.7 ",
    "deepspeed==0.14.5",
    "peft==0.14.0",
    "accelerate==0.34",
    "tokenizers==0.20.3",
    "transformers==4.51.3",
    "bitsandbytes==0.45.0",
    "scikit-learn==1.2.2",
    "sentencepiece~=0.1.99",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "gradio_client==0.2.9",
    "urllib3<=2.0.0",
    "datasets==2.16.1",
    "pydantic==1.10.8",
    "timm==1.0.12",
    "hf_transfer==0.1.8",
    "opencv-python==4.10.0.84",
    "av==14.0.1",
    "decord==0.6.0",
    "tyro==0.9.5",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["llava*", "trl*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]
